--- a/test.html
+++ b/test.html
@@ -7,7 +7,13 @@
         <meta name="author" content="Eric Kuha">
     </head>
     <body>
-        <!-- This is a comment -->
-        <p>Hello World!</p>
+        <img src="jimmy.jpg" alt="Jimmy the red husky" width="400">
+        <img src="computer.jpg" alt="A family playing with a retro computer" width="400px">
+        <img src="rocket.jpg" alt="Rocket making a face" width="400px">
+
+        <hr>
+
+        <p>Here is a sentence</p><p>Here's another sentence</p>
+
     </body>
 </html>
